# FastPrompter

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  FastPrompter.pyw  FastPrompter_Improvements.txt  FastPrompter_Start.pyw  GUIDE_EN.md  GUIDE_RU.md  LICENSE  README.md  __FastPrompter__.pyw  _fix_vi.py  _translate.py  _untranslated.json  build.bat  deploy.cmd  deploy.ps1  main.py  pyproject.toml  release.cmd  requirements.txt  ruff.json  ruff_output.txt  tmp_vi_missing.txt
.asp/: BOARD.md  LOG.md  RFC.md  STYLE.md
.saipen/: BOARD.md  LOG.md  RFC.md  STATE.md  UI.md
.saipen_backup/: LOG.md  STATE.md
.vacskill/: BOARD.md  LOG.md
FastPrompter_Data/: local_data_v15.db-shm  local_data_v15.db-wal  local_data_v15.db.bak
i18n_build_scripts/: SAIPEN_PROTECT.txt  _check_existing.py  _check_lines.py  _check_sort.py  _final_verify.py  _gen_est.py  _gen_full.py  _parse_i18n.py  _parse_i18n2.py  analyze_i18n.py  analyze_i18n2.py  analyze_i18n3.py  build_fra.py  build_vi.py  check2.py  check_corruption.py  check_exact.py  check_files.py  check_i18n.py  check_id.py  check_keys.py  check_match.py  check_old_vi.py  check_parsed.py  check_quotes.py  check_syntax.py  count_langs.py  crosscheck.py  debug_keys.py  diff_keys.py  entries.py  est_full.py  extract_keys.py  fb_check.py  fill_ru_missing.py  final_check.py  find_bad_line.py  fix_count.py  fix_da.py  fix_fi.py  (+73 more)
scratch/: apply_patch.py  apply_patch2.py  apply_patch4.py  check_progress.py  check_saitranslate.py  copy_wiki_to_docs.py  execute_saitranslate_full.py  extract_logs.py  extract_logs2.py  extract_logs3.py  (+36 more)
(+238 files in other folders)
