[project]
name = "fastprompter"
version = "0.1.0"
description = "FastPrompter - A robust snippet management tool"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.10.0",
    "PyQt6>=6.8.0",
]

[project.scripts]
fastprompter = "fastprompter.main:main_entry"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fastprompter"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
